linux (3.14.13-3) UNRELEASED; urgency=medium

  [ Aurelien Jarno ]
  * Update German debconf template translations (Holger Wansing) (Closes:
    #756049).
  * Update French debconf template translations (David Prévot) (Closes:
    #756134).

  [ Ben Hutchings ]
  * [amd64] Reject x32 executables if x32 ABI not supported
  * [amd64] Make x32 syscall support conditional on a kernel parameter
  * [amd64] Enable X86_X32 (Closes: #708070) and X86_X32_DISABLED.
    Use the kernel parameter "syscall.x32=y" to enable support for x32.

 -- Aurelien Jarno <aurel32@debian.org>  Fri, 25 Jul 2014 23:02:24 +0200

linux (3.14.13-2) unstable; urgency=medium

  [ Aurelien Jarno ]
  * [mips64,mips64el] Really enable mips64 and mips64el architectures.
  * [mips64,mips64el] Build udebs for 5kc-malta flavour. 
  * [mipsel,mips64el/loongson-3] Disable not built modules in nic-modules,
    scsi-common-modules, scsi-extra-modules, scsi-modules (fixes FTBFS).
  * Add scsi_transport_sas and scsi_transport_spi to scsi-core-modules udeb
    as optional so that these modules do not end up in two different udebs
    as dependencies. Remove them from the i386, ia64, powerpc and sparc
    definition.
  * [mipsel,mips64el/loongson-2e,2f] Enable CONFIG_RTC_DRV_CMOS as built-in.
  * [mips*] Add few new udebs and use standard udebs configuration when
    possible.
  * [s390,s390x] ptrace: fix PSW mask check (CVE-2014-3534).
  * [mipsel,mips64el/loongson-3] Enable PREEMPT instead of PREEMPT_VOLUNTARY
    as it workarounds SMP issues.

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 24 Jul 2014 21:05:08 +0200

linux (3.14.13-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.14.13
    - iio: ti_am335x_adc: Fix: Use same step id at FIFOs both ends
      (regression in 3.11)
    - [hppa] Do not hardcode maximum userspace stack size (regression in 3.14)
    - workqueue: fix dev_set_uevent_suppress() imbalance (regression in 3.10)