@@ -5,7 +5,6 @@ use warnings;
 use Cwd 'abs_path';
 use Debconf::Client::ConfModule qw(:all);
 use POSIX ();
-use File::stat;
 version('2.0');
 my $capb = capb('backup', 'escape');
 
@@ -552,9 +551,10 @@ else {
 # of / are the same as that of /sbin/init. This may fail if not running as
 # root or if /proc is not mounted, in which case 2 is returned.
 sub detect_chroot {
-  my $st1 = stat("/") or return 2;
-  my $st2 = stat("/proc/1/root") or return 2;
-  return ($st1->dev != $st2->dev) || ($st1->ino != $st2->ino);
+  my $dev1, $ino1, $dev2, $ino2;
+  ($dev1, $ino1) = stat("/") or return 2;
+  ($dev2, $ino2) = stat("/proc/1/root") or return 2;
+  return ($dev1 != $dev2) || ($ino1 != $ino2);
 }
 
 sub is_package_installed {
