@@ -5,6 +5,7 @@ linux (3.14.13-3) UNRELEASED; urgency=medium
     #756049).
   * Update French debconf template translations (David Prévot) (Closes:
     #756134).
+  * Rewrite postinst to not require File::stat perl module (Closes: #756207).
 
   [ Ben Hutchings ]
   * [amd64] Reject x32 executables if x32 ABI not supported
